Fixed grid overflow issue

--- a/style.css
+++ b/style.css
@@ -121,10 +121,24 @@ body {
 
 /* Multiple Books View */
 
-.multiBooksView {}
+.multiBooksView {
+
+    box-sizing: border-box;
+    overflow:hidden;
+
+    /* flex */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+/* View Header */
 
 .mbvHeader {
     padding: 20px;
+    width: 95%;
 
     /* flex */
     display: flex;
@@ -178,8 +192,52 @@ button[Type="submit"] i {
     width: 12vw;
 }
 
+/* Bookshelf */
 
+.bookshelf{
+    background-color: #567212;
+    width: 90%;
+    height: 80%;
+    padding: 20px;
+    box-sizing: border-box;
 
+    /* Grid */
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, 20vh);
+    align-items: center;
+    grid-auto-flow: column;
+    overflow-x: auto;
+    gap: 40px;
+
+}
+
+.bookCard{
+    background-color: white;
+    
+
+    /* flex */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.cardImg{
+
+    height: 20vh;
+    width: 20vh;
+
+    background-color: black;
+}
+
+.cardTitle{
+    margin-top: 5px;
+}
+
+.filler{
+    width: 20vh;
+    height: 20vh;
+}
 
 /* Single Book View */
 
@@ -202,7 +260,6 @@ button[Type="submit"] i {
     width: 60%;
     height: 30vh;
 }
-
 
 
 
